[metadata]
name = conventional-commit
version = 0.1
description = A pre-commit hook that checks commit messages for Conventional Commits formatting

[options]
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    conventional-pre-commit = conventional-commit.hook:main
